# bitcoin-quant

./: .gitignore  pyproject.toml
data/raw/20250130_171956/: binance_btc_usdt_15m.csv  binance_btc_usdt_15m.csv.meta.json
notebooks/01_data_collection/: ccxt_data_fetch.ipynb  crypto_ex_data_fetch.ipynb  data_cleaning_and_preprocessing.ipynb
notebooks/02_back_testing/: 1.ipynb
notebooks/libs/: backtesting.ipynb  vectorbt.ipynb
