[project]
name = "python"
version = "0.1.0"
description = ""
authors = [{ name = "francismiko", email = "1485059943@qq.com" }]
requires-python = ">=3.13"
dependencies = ["jupyter (>=1.1.1,<2.0.0)", "notebook (>=7.3.2,<8.0.0)", "ipykernel (>=6.29.5,<7.0.0)", "jupyterlab (>=4.3.4,<5.0.0)", "ccxt (>=4.4.52,<5.0.0)", "pandas (>=2.2.3,<3.0.0)", "matplotlib (>=3.10.0,<4.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
