[project]
name = "python"
version = "0.1.0"
description = ""
authors = [{ name = "francismiko", email = "1485059943@qq.com" }]
requires-python = ">=3.13"
dependencies = [
  "jupyter (>=1.1.1,<2.0.0)",
  "notebook (>=7.3.2,<8.0.0)",
  "ipykernel (>=6.29.5,<7.0.0)",
  "jupyterlab (>=4.3.4,<5.0.0)",
  "ccxt (>=4.4.52,<5.0.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "matplotlib (>=3.10.0,<4.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "sqlalchemy (>=2.0.37,<3.0.0)",
  "plotly (>=5.22.0,<6.0.0)",
  "psycopg2-binary (>=2.9.10,<3.0.0)",
  "redis (>=5.2.1,<6.0.0)",
  "pyarrow (>=19.0.0,<20.0.0)",
  "fastparquet (>=2024.11.0,<2025.0.0)",
  "tenacity (>=9.0.0,<10.0.0)",
  "scipy (>=1.15.1,<2.0.0)",
  "backtesting (>=0.5.0,<0.6.0)",
  "vectorbt (>=0.27.2,<0.28.0)",
  "yfinance (>=0.2.52,<0.3.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
